--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "gulp-project",
-  "version": "1.0.5",
-  "description": "",
-  "main": "index.js",
-  "private": true,
+  "name": "desktop-image-optimization",
+  "version": "2.0.1",
+  "description": "Desktop Image Optimization",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Denis Shapkun",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/DenisShapkun/optimize-images.git"
+  },
+  "keywords": [
+    "optimize",
+    "images"
+  ],
+  "author": "Denis Creative",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DenisShapkun/optimize-images/issues"
+  },
+  "homepage": "https://github.com/DenisShapkun/optimize-images#readme",
   "devDependencies": {
-    "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-cache": "^1.1.0",
-    "gulp-gm": "0.0.9",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-image-resize": "^0.13.1",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-imagemin": "^7.1.0",
     "imagemin-jpeg-recompress": "^6.0.0"
   }
 }
